# lenon_generator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: answer_parser_service.py  generator_service.py  grayscale.py  lesson_notes_service.py  server.py  system_prompts.py  uploader_service.py
