[tool.poetry]
name = "lenon_generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "^2.8.2"
fastapi = "^0.112.0"
sqlalchemy = "^1.4.53"
python-dotenv = "^1.0.1"
openai = "^1.38.0"
pillow = "^10.4.0"
paddleocr = "^2.8.1"
numpy = "^1.26.4"
requests = "^2.32.3"
langchain = "^0.2.12"
langchain-community = "^0.2.10"
langchain-core = "^0.2.27"
langchain-openai = "^0.1.20"
langchain-text-splitters = "^0.2.2"
qdrant-client = "^1.10.1"
pymysql = "^1.0.2"
paddlepaddle = "^2.6.2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
